--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home page</title>
 
     <link rel="stylesheet" href="./styles/beauty.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./fav.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./assets/logos/yapplogo152.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
