--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Worthy cost calculator.</h1>
-    <p>new content 1234434ssdd</p>
+    <p>new content 1</p>
     <ion-item>
         <ion-label position="floating">Number of pages:</ion-label>
         <ion-input id="pageCount"></ion-input>
