--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Worthy cost calculator.</h1>
-    <p>new content 5</p>
+    <p>new content 6</p>
     <ion-item>
         <ion-label position="floating">Number of pages:</ion-label>
         <ion-input id="pageCount"></ion-input>
@@ -33,7 +33,7 @@
     <ion-button id="calculate" color="primary">Calculate</ion-button>
     
     <p class="rs">
-        The book will cost:
+        The book will cost: <br>
             <ion-text id="costResult" color="primary"></ion-text>   
     </p>
 
