--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <body>
-    <h1>Worthy cost calculator. 14</h1>
+    <h1>Worthy cost calculator. 15</h1>
     <ion-item>
         <ion-label position="floating">Number of pages:</ion-label>
         <ion-input id="pageCount"></ion-input>
@@ -39,6 +39,7 @@
           </p>
     
     <button id="cacheCleaner">clear</button>
+    <button id="updater">update service worker</button>
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/dist/ionic/ionic.js"></script>
