--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <body>
-    <h1>Worthy cost calculator. 10</h1>
+    <h1>Worthy cost calculator. 11</h1>
+    <p id="updatemsg"></p>
     <ion-item>
         <ion-label position="floating">Number of pages:</ion-label>
         <ion-input id="pageCount"></ion-input>
