--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@4.7.4/dist/ionic/ionic.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/mainx.js"></script>
 </body>
 </html>
