--- a/assets/cached.html
+++ b/assets/cached.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <p>I have been cached by the PWA settings at sw.js</p>
+    <div id="dynamicContent">Loading...</div>
 
 <script>
     var ifConnected = window.navigator.onLine;
     if (ifConnected) {
         //http://gourabxz.github.io/worthyassist.github.io/assets/cached.html
         console.log("app has connection");
+        setTimeout(() => {
+            window.location = "../index.html";
+        }, 3000);
     } else {
         console.log("not connected");
-        window.location = "../index.html";
     }
 </script>
 </body>
