--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 <body>
     <h1>Worthy cost calculator</h1>
-    <p id="vp">v</p>
+    <p style="display: inline" id="vp">v</p> <button id="vAdd">Add version</button>
+    
     <ion-item>
         <ion-label position="floating">Number of pages:</ion-label>
         <ion-input id="pageCount"></ion-input>
