--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./styles/beauty.css">
     <link rel="icon" href="./fav.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="./assets/logos/yapplogo152.png">
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="YAPP">
